--- a/RocketControlUnitGUI/package.json
+++ b/RocketControlUnitGUI/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "Rocket-Control-Unit",
+  "name": "rocket_control_unit",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "playwright test",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check . && eslint .",
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@playwright/test": "^1.28.1",
     "@skeletonlabs/skeleton": "2.5.1",
     "@skeletonlabs/tw-plugin": "0.2.4",
-    "@sveltejs/adapter-node": "^4.0.1",
+    "@sveltejs/adapter-node": "^2.1.2",
     "@tailwindcss/forms": "0.5.7",
     "@tailwindcss/typography": "0.5.10",
     "@types/node": "20.10.0",
@@ -35,11 +33,14 @@
     "tailwindcss": "3.3.5",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite-plugin-tailwind-purgecss": "^0.2.1"
+    "vite-plugin-tailwind-purgecss": "^0.2.1",
+    "vite": "^5.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.1.2"
   },
   "type": "module",
   "dependencies": {
     "@floating-ui/dom": "1.5.3",
+    "@sveltejs/kit": "^2.15.2",
     "pocketbase": "^0.20.3"
   }
 }
