--- a/RocketControlUnitGUI/tsconfig.json
+++ b/RocketControlUnitGUI/tsconfig.json
@@ -1,16 +1,22 @@
 {
 	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
-		"allowJs": true,
-		"checkJs": true,
-		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": true,
-		"resolveJsonModule": true,
-		"skipLibCheck": true,
-		"sourceMap": true,
-		"strict": true,
-		"moduleResolution": "bundler"
-	}
+    	"allowJs": true,
+    	"checkJs": false,
+    	"jsx": "preserve",
+    	"module": "esnext",
+    	"moduleResolution": "node",
+    	"resolveJsonModule": true,
+    	"allowArbitraryExtensions": true,
+    	"target": "es2017",
+    	"lib": ["dom", "es2017"],
+    	"strict": true,
+    	"skipLibCheck": true,
+    	"esModuleInterop": true,
+    	"types": ["svelte", "node"]
+  	},
+  	"include": ["src/**/*", "src/**/*.svelte"],
+  	"exclude": ["node_modules"]
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
 	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
